[gd_scene load_steps=5 format=3 uid="uid://cy8hpfp3doqyb"]

[ext_resource type="Texture2D" uid="uid://k6lurgcyvogq" path="res://assets/pipe.png" id="1_0y6vi"]
[ext_resource type="Script" path="res://scripts/pipe.gd" id="1_flm7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvo80"]
size = Vector2(22, 319)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4uo6"]
size = Vector2(22, 319)

[node name="Pipe" type="StaticBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_flm7b")

[node name="CollisionShapeUp" type="CollisionShape2D" parent="."]
position = Vector2(0, -160)
shape = SubResource("RectangleShape2D_wvo80")

[node name="CollisionShapeDown" type="CollisionShape2D" parent="."]
position = Vector2(0, 160)
shape = SubResource("RectangleShape2D_n4uo6")

[node name="SpriteUp" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_0y6vi")
centered = false
offset = Vector2(-11.5, -320)

[node name="SpriteDown" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("1_0y6vi")
centered = false
offset = Vector2(-11.5, -320)
flip_h = true
